# micropython-font-to-py

./: .pre-commit-config.yaml  Chinese_Japanese  Chinese_Japanese.md  DRIVERS.md  FONT_TO_PY.md  README.md  c_to_python_font.py  cyrillic_subset  display.py  display_test.py  driver_test.py  extended  font_test.py  font_to_py.py  latin15  pyproject.toml  writer.py
charsets/: Hebrew  Hebrew.txt  RTL_languages.md  Thailand  chess  chess.md  cyrillic  extended
font_to_py/: alt_writer.py  bin_writer.py  bitmap.py  byte_writer.py  cli.py  font.py  glyph.py  py_writer.py  writer.py
icon_fonts/: README.md  back.c  default.c  filenames.txt  fwd.c  pause.c  play.c  stop.c
writer/: DRIVERS.md  WRITER.md  ssd1306_setup.py  writer.py  writer_demo.py  writer_gui.py  writer_tests.py
writer/framebuf_utils/: Makefile  framebuf_utils.c  test.py
writer/old_versions/: writer_minimal.py
